[workspace]
resolver = "2"
members = [
    "contracts/escrow",
    "contracts/milestones",
    "contracts/maintenance-pool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
soroban-sdk = "26.1.0"

# Build wasm contracts as small and fast as possible.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
